# src/aect/application/structured_output.py
@@ -52,14 +52,14 @@ class CaseField(StrEnum):
     DESIRED_STATE = "desired_state"
     EXAMPLE_PROCESS = "example_process"
     DESIRED_EXAMPLE_PROCESS = "desired_example_process"
-    TIME_SAVINGS = "time_savings_hours_per_case"
-    FREQUENCY = "frequency_per_year"
+    TIME_PER_CASE_HOURS_CURRENT = "time_per_case_hours_current"
+    TIME_PER_CASE_HOURS_WITH_AI = "time_per_case_hours_with_ai"
+    OCCURRENCES_PER_EMPLOYEE_PER_YEAR = "occurrences_per_employee_per_year"
     AFFECTED_EMPLOYEES = "affected_employees_count"
     EMPLOYEE_CATEGORY = "employee_category"
     EVIDENCE_LEVEL = "evidence_level"
     ADOPTION_TYPE = "adoption_type"
     IMPLEMENTATION_APPROACH = "implementation_approach"
-    IMPLEMENTATION_COMPLEXITY = "implementation_complexity"
     ESTIMATED_LICENSE_COST = "estimated_license_cost_eur"
     IMPLEMENTATION_COST = "implementation_cost_eur"
     DATA_CLASSIFICATION = "data_classification"
